# meep-squared

./: Cargo.toml  LICENSE  README.md
programs/: fib.msq  hello_world.msq  signs.msq  test.msq
src/: main.rs
src/interpreter/: mod.rs
src/parsers/: args_list.rs  boolean.rs  closure.rs  conditional.rs  function_call.rs  function_declaration.rs  identifier.rs  mod.rs  number.rs  operations.rs  program.rs  return_statement.rs  statements.rs  string.rs  value.rs  variable.rs  ws.rs
