[package]
name = "meep_squared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap="*"
nom="7"
dialoguer = "0.10.2" 
colored = "2.0.0"

[dependencies.uuid]
version="1.1.2"
features = [
    "v4"
]

[profiles.release]
opt-level = 3 
